# djinn

./: .env  .gitignore  CLAUDE.md  README.md  docker-compose.gpu.yml  docker-compose.yml  kb  renovate.json
.claude/: settings.json
.claude/agents/: zelda.md
.claude/commands/: analyst.md  architect.md  dev.md  pm.md  recruiter-original.md.bak  recruiter.md  sm.md  teacher.md  ux.md
.memory/: Architecture.md  Claude Code Guide.md  Claude Code Implementation.md  Guide.md  Project.md
.memory/.obsidian/: workspace.json
.memory/diagrams/: Orchestrator Workflow.md
.memory/patterns/: Checklists.md  Memory.md  Orchestrator Responsibility Pattern.md  Orchestrator.md  Skill.md  Sub-agent.md  Templates.md  Working Memory.md
.memory/reference/: Catalog.md  Claude Code Guide.md
.memory/references/: Shape Up.md
.obsidian/: appearance.json  core-plugins.json  graph.json  workspace.json
.vector_db/: KB-INSTRUCTIONS.md  KB_ENHANCED_DOCUMENTATION.md  enhanced_graphrag.py  harvest  harvest_and_store.py  kb  kb.py  kb_auto_indexer.py  kb_enhanced.py  kb_main.py  kb_qdrant.py  microsoft_graphrag.json  migrate_to_enhanced.py  pyproject.toml  requirements_enhanced.txt  setup.sh  setup_crawl4ai.sh  setup_enhanced_kb.sh  test_crawl4ai.py
backend/: .env.example  .mockery.yaml  Makefile  README.md  README_SCHEMA_WORKFLOW.md  atlas.hcl  go.mod  go.sum  gqlgen.yml  pgbouncer.ini  schema.sql  sqlc.yaml  userlist.txt
docs/: KNOWLEDGE_BASE.md  README.md  auto-load-recommendations.md
harvested/: README.md
mobile/: README.md  pubspec.yaml
templates/: AGENTS.md  CLAUDE.md
(+1105 files in other folders)
