[project]
name = "djinn-kb"
version = "2.0.0"
description = "Djinn Enhanced Knowledge Base with Hybrid Search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "sentence-transformers>=5.1.0",
    "rank-bm25>=0.2.2",
    "nltk>=3.8",
    "watchdog>=3.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "networkx>=3.5",
    "crawl4ai==0.6.2",
]
